<resources>
    <string name="app_name">Simple Paper Soccer</string>
    <string name="difficulty_name">Difficulty</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>
    <string name="veryHard_difficulty">VeryHard</string>
    <string name="player_name">Player name</string>
    <string name="default_player_name">Player1</string>

    <string name="single_player_mode">Single Player</string>
    <string name="local_multiplayer_mode">Local Multiplayer</string>
    <string name="ai_vs_ai_mode">AI VS AI</string>

    <string name="choose_game_mode">Choose Game Mode</string>

    <string name="howToPlayButtonText">How to play</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8311998646565881/5426668458</string>

    <string name="pref_difficultyLevelTypes_default">Easy</string>
    <string name="play_text">Play</string>
    <string name="settings_button_text">Settings</string>
    <string name="exit_button_text">Exit</string>
    <string name="play_again_button_text">Play again</string>
    <string name="quit_button_text">Quit</string>
    <string name="game_victory_out_of_moves">won because the opponent ran out of moves!</string>
    <string name="game_victory_scored_goal">scored a goal!</string>
    <string name="game_victory_timed_out">won because opponent timed out</string>

    <string name="game_partial_turn">s turn</string>
    <string name="game_partial_its">It\'s</string>

    <string name="tutorial1_text">Paper soccer is a two player turn based game where the objective is to bring the ball to your opponents goal.</string>
    <string name="tutorial2_text">You move by tapping on one of the grid crossed highlighted in your player color.</string>
    <string name="tutorial3_text">You can\'t move to a cross if there is already a connection between the ball cross and that cross.</string>
    <string name="tutorial4_text">If you land on a cross that the ball has visited before you gain an additional move. Walls (the black lines) also grants an extra turn but you can\'t move along the wall</string>
</resources>
