<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/drawable_background"
    tools:context="${relativePackage}.${activityClass}">

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/howToPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/howToPlayButtonText"
        android:onClick="HowToPlayClick"
        android:layout_below="@+id/settingsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:src="@drawable/main_logo"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/singleplayerButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="SingleplayerClick"
        android:text="@string/play_text"
        android:layout_below="@+id/imageView" />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:onClick="SettingsClick"
        android:text="@string/settings_button_text"
        android:layout_below="@+id/singleplayerButton" />

    <Button
        style="@style/MainMenuButton"
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="10dp"
        android:onClick="ExitClick"
        android:text="@string/exit_button_text" />

</RelativeLayout>
